feat: fix Lombok, add Angular components, get full stack running locally